宿泊予約アプリ

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Rails2RoomApp</title>
+    <title>Poteshare</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -11,6 +11,43 @@
   </head>
 
   <body>
+  <header>
+    <h1 class="link"><%= link_to "PoteShare",:users, class:"link" %></h1>
+    
+    <%= search_form_for @q, url: search_rooms_path do |f| %>
+      <%= f.search_field :adress_cont, placeholder:'エリア' %>
+      <%= f.search_field :name_or_introduction_or_price_cont, placeholder:'キーワード' %>
+      <%= f.submit '検索'%>
+    <% end %>
+    
+    <% if user_signed_in? %>
+      <div class="header-navi">
+        <input id="acd-check1" class="acd-check" type="checkbox">
+        <label class="acd-label" for="acd-check1"><%=image_tag current_user.icon.url, class: "icon"%></label>
+        <div class="acd-content">
+          <ul>
+            <li><%=link_to "新規ルーム登録",:new_room%></li>
+            <li><%=link_to "予約一覧", reservations_path%></li>
+            <li><%=link_to "登録一覧",:rooms%></li>
+            <li><%=link_to "設定",current_user%></li>
+            <li><%=link_to "ログアウト", destroy_user_session_path, method: :delete %></li>
+          </ul>
+        </div>
+      </div>
+    <% else %>
+    <!-- ユーザーがログインしていなかった時の処理 -->
+    <div class="header-menu">
+      <ul>
+        <li class= "menu-login"><%= link_to "ログイン", new_user_session_path, class:'Editlink' %></li> <!-- ログイン画面に移行する -->
+        <li class= "menu-signup"><%= link_to "新規登録", new_user_registration_path, class: 'Editlink' %></li> <!-- 新規登録画面に移行する -->
+      </ul>
+    </div>
+
+    <% end %>
+  </header>
     <%= yield %>
+  <footer>
+    <p>&copy; 2022 POTEPAN.INC.</p>
+  </footer>
   </body>
 </html>
